# xml-parser-rust

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: entities.rs  main.rs  settings.rs  utils.rs  xmldocument.rs
src/_tests/: settings.rs  utils.rs  xmldocument.rs
src/_tests/documents/: test11.xml  test12.xml  test2.xml  test3.xml  test5.xml  test6.xml  test7.xml  test9.xml
src/config/: entities.rs  mod.rs  settings.rs
src/parser/: mod.rs  xmldocument.rs  xmltag.rs
src/utils/: mod.rs
tests/documents/: test1.xml  test10.xml  test4.xml  test8.xml
