[package]
name = "xml-parser"
version = "0.1.0"
edition = "2021"
description = "A simple converter xml documentation files to the markdown syntax"
authors = ["Taras Chornyi <taras.chornyi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
string-builder = "0.2.0"
config = "0.13.1"